--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .*zip
 .*params
-.*predictions
-.*tsv
-.*txt
-./DS_Store
-./idea/
-./__pycache__
-./texpadtmp/
-./data/
-./save/
+*.predictions
+*.tsv
+*.txt
+DS_Store
+idea/
+__pycache__
+texpadtmp/
+data/
+save/
